# doodles

./: README.md  main.py  pyproject.toml
.github/actions/: lint.yml
.github/workflows/: lint.yml
src/doodles/: __init__.py  color.py  doodles.py  draw_engine.py  layouts.py  lines.py  main.py  shapes.py  text.py  world.py
src/doodles/examples/: balls.py  circles.py  clock.py  copies.py  grid.py  liskov.py  polygons.py  rects.py  scale.py  words.py
